multi-tier-network/internet_gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Name      = "${var.service}-gateway"
    terraform = true
    module    = "vpc"
  }
}
